Fix for Sort filter breaking layout on iPhone 5 and smaller devices. Moved search bar next to the title on mobile devices.

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,27 +1,37 @@
 @import '../../assets/styles/core.scss';
 
 .search-wrapper {
-  position: relative;
-  min-width: 120px;
-  width: 25%;
+  width: 50%;
 
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 1.8rem;
-    background: url('../../assets/search_icon.svg') no-repeat center;
-    background-size: 1.5rem;
+  @include media(mobile down) {
+    display: flex;
+    justify-content: flex-end;
+    width: 75%;
   }
+  
+  .search-box {
+    position: relative;
+    min-width: 120px;
+    width: 75%;
 
-  .search-bar {
-    width: 100%;
-    padding: 0.5rem 2rem 0.5rem 0.75rem;
-    border: 1px solid $app-input-border;
-    border-radius: 4px;
-    color: $app-text-secondary;
-    box-shadow: 0 2px 4px $app-input-shadow;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 1.8rem;
+      background: url('../../assets/search_icon.svg') no-repeat center;
+      background-size: 1.5rem;
+    }
+
+    .search-bar {
+      width: 100%;
+      padding: 0.5rem 2rem 0.5rem 0.75rem;
+      border: 1px solid $app-input-border;
+      border-radius: 4px;
+      color: $app-text-secondary;
+      box-shadow: 0 2px 4px $app-input-shadow;
+    }
   }
 }
