--- a/src/containers/Feed/Feed.scss
+++ b/src/containers/Feed/Feed.scss
@@ -1,16 +1,25 @@
 @import '../../assets/styles/core.scss';
 
 .feed-container {
-   h1 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-    
+  .flexi-header {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0 1.75rem 0.5rem;
+
     @include media(mobile down) {
-      padding-left: 1rem;
-      padding-right: 1rem;
+      padding: 0 1rem 0.5rem;
+    }
+
+    h1 {
+      width: 100%;
+      
+      @include media(mobile down) {
+        width: 25%;
+      }
     }
   }
-
+  
   h2 {
     margin-top: 2rem;
     padding: 0 1.75rem;
@@ -18,17 +27,6 @@
     @include media(mobile down) {
       margin-top: 2rem;
       padding: 0 1rem;
-    }
-  }
-
-  .filter-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1.75rem 0.5rem;
-
-    @include media(mobile down) {
-      padding: 0 1rem 0.5rem;
     }
   }
 
